--- a/index.html
+++ b/index.html
@@ -19,14 +19,27 @@
 
         <div class="1stBlock">
             <div class="propaganda-block">
-                <h2>I am a big words. You will join the cult</h2>
+                <h1>I am a big words. You will join the cult</h1>
                 <p>This is a bunch of words underneath the ledger header of your indoctrination. It is said that in the darkest hours of the Lightless Ages, there was not but an eternal cold which gnawed at the bones of all living things. It is thought that this cold was so strong it penetrated through even the earth of the world, such that not even those things of the subterannean world were safe from a frigid death.</p>
                 <button>Join us</button>
             </div>
         </div>
         
         <div class="2ndBlock">
-
+            <h2>Gaze upon the faithful. See those who have shown resolve beyond yours.</h2>
+            <!-- Make imgs have rounded corners -->
+            <ul class="deathrow-portraits">
+                <li><img alt="An image displaying the face of a faithful one."></li>
+                <li><img alt="An image displaying the face of a faithful one."></li>
+                <li><img alt="An image displaying the face of a faithful one."></li>
+                <li><img alt="An image displaying the face of a faithful one."></li>
+            </ul>
+            <ul class="deathrow-eulogies">
+                <li>See the faithful. Gaze into their eyes and envy. Envy for they hold something you do not. Feel hatred at their devotion. Hate, for <em>you</em> are <em>inferior.</em></li>
+                <li>See the faithful. Gaze into their eyes and envy. Envy for they hold something you do not. Feel hatred at their devotion. Hate, for <em>you</em> are <em>inferior.</em></li>
+                <li>See the faithful. Gaze into their eyes and envy. Envy for they hold something you do not. Feel hatred at their devotion. Hate, for <em>you</em> are <em>inferior.</em></li>
+                <li>See the faithful. Gaze into their eyes and envy. Envy for they hold something you do not. Feel hatred at their devotion. Hate, for <em>you</em> are <em>inferior.</em></li>
+            </ul>
         </div>
 
         <div class="3rdBlock">
