Add 4th content block. Add image to block 1 and made links actually link

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <div class="header">
         <h3>I Am The Head</h3> 
             <ul>
-             <li>header link one</li>
-             <li>header link two</li>
-             <li>header link tre</li>
+             <li><a href="./index.html">header link one</a></li>
+             <li><a href="./index.html">header link two</a></li>
+             <li><a href="./index.html">header link tre</a></li>
             </ul>
         </div>
 
@@ -22,6 +22,8 @@
                 <h1>I am a big words. You will join the cult</h1>
                 <p>This is a bunch of words underneath the ledger header of your indoctrination. It is said that in the darkest hours of the Lightless Ages, there was not but an eternal cold which gnawed at the bones of all living things. It is thought that this cold was so strong it penetrated through even the earth of the world, such that not even those things of the subterannean world were safe from a frigid death.</p>
                 <button>Join us</button>
+
+                <img alt="Some kinda image of something">
             </div>
         </div>
         
@@ -48,7 +50,13 @@
         </div>
 
         <div class="4thBlock">
-            
+            <div class="deep-indocrination">
+                <h3>'Tis time. You can delay no longer. Choose.</h3>
+                <p>Some words go here</p>
+
+                <button>Join us.</button>
+                <button>Defy us.</button>
+            </div>
         </div>
 
         <div class="footer">
