html dump complete, begin styling. Trouble with header link list displaying row, not column

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
 
         <div class="3rdBlock">
-            <p>When came the dusk of the Lighless Ages, dawn of the First True Age, a peculiarity was distinctly noticed upon the skies of the world. There hang in the black void, ten great rocks of luminous sheens. Ten great rocks of many colors, which had not been there before.</p>
+            <p>When came the dusk of the Lighless Ages, dawn of the First True Age, a peculiarity was distinctly noticed upon the skies of the world. There hung in the black void, ten great rocks of luminous sheens. Ten great rocks of many colors, which had not been there before.</p>
             <h4>-Quote, Quote</h4>
         </div>
 
