--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <body>
         <div class="header">
         <h3>I Am The Head</h3> 
-            <ul>
+            <ul class="linksofthehead">
              <li><a href="./index.html">header link one</a></li>
              <li><a href="./index.html">header link two</a></li>
              <li><a href="./index.html">header link tre</a></li>
             </ul>
         </div>
 
-        <div class="1stBlock">
+        <div class="block1">
             <div class="propaganda-block">
                 <h1>I am a big words. You will join the cult</h1>
                 <p>This is a bunch of words underneath the ledger header of your indoctrination. It is said that in the darkest hours of the Lightless Ages, there was not but an eternal cold which gnawed at the bones of all living things. It is thought that this cold was so strong it penetrated through even the earth of the world, such that not even those things of the subterannean world were safe from a frigid death.</p>
@@ -27,7 +27,7 @@
             </div>
         </div>
         
-        <div class="2ndBlock">
+        <div class="block2">
             <h2>Gaze upon the faithful. See those who have shown resolve beyond yours.</h2>
             <!-- Make imgs have rounded corners -->
             <ul class="deathrow-portraits">
@@ -44,12 +44,12 @@
             </ul>
         </div>
 
-        <div class="3rdBlock">
+        <div class="block3">
             <p>When came the dusk of the Lighless Ages, dawn of the First True Age, a peculiarity was distinctly noticed upon the skies of the world. There hung in the black void, ten great rocks of luminous sheens. Ten great rocks of many colors, which had not been there before.</p>
             <h4>-Quote, Quote</h4>
         </div>
 
-        <div class="4thBlock">
+        <div class="block4">
             <div class="deep-indocrination">
                 <h3>'Tis time. You can delay no longer. Choose.</h3>
                 <p>Some words go here</p>
