Finish first block. Rather easily, actually.

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                 <h1>I am a big words. You will join the cult</h1>
                 <p>This is a bunch of words underneath the ledger header of your indoctrination. It is said that in the darkest hours of the Lightless Ages, there was not but an eternal cold which gnawed at the bones of all living things. It is thought that this cold was so strong it penetrated through even the earth of the world, such that not even those things of the subterannean world were safe from a frigid death.
                 </p>
-                <button>Join us</button>
+                <button id="topbutton">Join us</button>
+                </div>
 
-                <img src="./images/Runes2.webp" width="200px" height="200px" alt="An image of the Founding Tome, runes inscribed upon the front.">
-            </div>
+                <img src="./images/Runes2.webp" width="425px" height="225px" alt="An image of the Founding Tome, runes inscribed upon the front.">
         </div>
         
         <div class="block2">
