Make block 2 images align properly. Proceed to create images.

--- a/index.html
+++ b/index.html
@@ -32,16 +32,23 @@
             <h2>Gaze upon the faithful. See those who have shown resolve beyond yours.</h2>
             <!-- Make imgs have rounded corners -->
             <ul class="deathrow-portraits">
-                <li><img alt="An image displaying the face of a faithful one."></li>
-                <li><img alt="An image displaying the face of a faithful one."></li>
-                <li><img alt="An image displaying the face of a faithful one."></li>
-                <li><img alt="An image displaying the face of a faithful one."></li>
-            </ul>
-            <ul class="deathrow-eulogies">
-                <li>See the faithful. Gaze into their eyes and envy. Envy for they hold something you do not. Feel hatred at their devotion. Hate, for <em>you</em> are <em>inferior.</em></li>
-                <li>See the faithful. Gaze into their eyes and envy. Envy for they hold something you do not. Feel hatred at their devotion. Hate, for <em>you</em> are <em>inferior.</em></li>
-                <li>See the faithful. Gaze into their eyes and envy. Envy for they hold something you do not. Feel hatred at their devotion. Hate, for <em>you</em> are <em>inferior.</em></li>
-                <li>See the faithful. Gaze into their eyes and envy. Envy for they hold something you do not. Feel hatred at their devotion. Hate, for <em>you</em> are <em>inferior.</em></li>
+                <div class="portrait">
+                    <li><img alt="An image displaying the face of a faithful one."></li>
+                    <li>See the faithful. Gaze into their eyes and envy. Envy for they hold something you do not. Feel hatred at their devotion. Hate, for <em>you</em> are <em>inferior.</em></li>
+                </div>
+                <div class="portrait">
+                    <li><img alt="An image displaying the face of a faithful one."></li>
+                    <li>See the faithful. Gaze into their eyes and envy. Envy for they hold something you do not. Feel hatred at their devotion. Hate, for <em>you</em> are <em>inferior.</em></li>
+                </div>
+                <div class="portrait">
+                    <li><img alt="An image displaying the face of a faithful one."></li>
+                    <li>See the faithful. Gaze into their eyes and envy. Envy for they hold something you do not. Feel hatred at their devotion. Hate, for <em>you</em> are <em>inferior.</em></li>
+                </div>
+                <div class="portrait">
+                    <li><img alt="An image displaying the face of a faithful one."></li>
+                    <li>See the faithful. Gaze into their eyes and envy. Envy for they hold something you do not. Feel hatred at their devotion. 
+                    Hate, for <em>you</em> are <em>inferior.</em></li>
+                </div>
             </ul>
         </div>
 
