Add images for portraits. Wrapping does not work properly without messing text up.

--- a/index.html
+++ b/index.html
@@ -25,27 +25,27 @@
                 <button id="topbutton">Join us</button>
                 </div>
 
-                <img src="./images/Runes2.webp" width="425px" height="225px" alt="An image of the Founding Tome, runes inscribed upon the front.">
+                <img src="./images/Runes2.webp" width="325px" height="225px" alt="An image of the Founding Tome, runes inscribed upon the front.">
         </div>
         
         <div class="block2">
-            <h2>Gaze upon the faithful. See those who have shown resolve beyond yours.</h2>
+            <h2 style="align-self: center;">Gaze upon the faithful. See those who have shown resolve beyond yours.</h2>
             <!-- Make imgs have rounded corners -->
             <ul class="deathrow-portraits">
                 <div class="portrait">
-                    <li><img alt="An image displaying the face of a faithful one."></li>
+                    <li><img src="./images/Arcanist.webp" height="300px" width="400px" alt="An image displaying the face of a faithful one."></li>
                     <li>See the faithful. Gaze into their eyes and envy. Envy for they hold something you do not. Feel hatred at their devotion. Hate, for <em>you</em> are <em>inferior.</em></li>
                 </div>
                 <div class="portrait">
-                    <li><img alt="An image displaying the face of a faithful one."></li>
+                    <li><img src="images/Myrkul.webp" height="300px" width="400px" alt="An image displaying the face of a faithful one."></li>
                     <li>See the faithful. Gaze into their eyes and envy. Envy for they hold something you do not. Feel hatred at their devotion. Hate, for <em>you</em> are <em>inferior.</em></li>
                 </div>
                 <div class="portrait">
-                    <li><img alt="An image displaying the face of a faithful one."></li>
+                    <li><img src="images/Blademist.webp" height="300px" width="400px" alt="An image displaying the face of a faithful one."></li>
                     <li>See the faithful. Gaze into their eyes and envy. Envy for they hold something you do not. Feel hatred at their devotion. Hate, for <em>you</em> are <em>inferior.</em></li>
                 </div>
                 <div class="portrait">
-                    <li><img alt="An image displaying the face of a faithful one."></li>
+                    <li><img src="images/Wanderer.webp" height="300px" width="400px" alt="An image displaying the face of a faithful one."></li>
                     <li>See the faithful. Gaze into their eyes and envy. Envy for they hold something you do not. Feel hatred at their devotion. 
                     Hate, for <em>you</em> are <em>inferior.</em></li>
                 </div>
