Forget rounded corners on images.

--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
             <!-- Make imgs have rounded corners -->
             <ul class="deathrow-portraits">
                 <div class="portrait">
-                    <li><img src="./images/Arcanist.webp" height="300px" width="400px" alt="An image displaying the face of a faithful one."></li>
+                    <li><img src="./images/Arcanist.webp" style="border-radius: 15px;" height="300px" width="400px" alt="An image displaying the face of a faithful one."></li>
                     <li>See the faithful. Gaze into their eyes and envy. Envy for they hold something you do not. Feel hatred at their devotion. Hate, for <em>you</em> are <em>inferior.</em></li>
                 </div>
                 <div class="portrait">
-                    <li><img src="images/Myrkul.webp" height="300px" width="400px" alt="An image displaying the face of a faithful one."></li>
+                    <li><img src="images/Myrkul.webp" style="border-radius: 15px;" height="300px" width="400px" alt="An image displaying the face of a faithful one."></li>
                     <li>See the faithful. Gaze into their eyes and envy. Envy for they hold something you do not. Feel hatred at their devotion. Hate, for <em>you</em> are <em>inferior.</em></li>
                 </div>
                 <div class="portrait">
-                    <li><img src="images/Blademist.webp" height="300px" width="400px" alt="An image displaying the face of a faithful one."></li>
+                    <li><img src="images/Blademist.webp" style="border-radius: 15px;" height="300px" width="400px" alt="An image displaying the face of a faithful one."></li>
                     <li>See the faithful. Gaze into their eyes and envy. Envy for they hold something you do not. Feel hatred at their devotion. Hate, for <em>you</em> are <em>inferior.</em></li>
                 </div>
                 <div class="portrait">
-                    <li><img src="images/Wanderer.webp" height="300px" width="400px" alt="An image displaying the face of a faithful one."></li>
+                    <li><img src="images/Wanderer.webp" style="border-radius: 15px;" height="300px" width="400px" alt="An image displaying the face of a faithful one."></li>
                     <li>See the faithful. Gaze into their eyes and envy. Envy for they hold something you do not. Feel hatred at their devotion. 
                     Hate, for <em>you</em> are <em>inferior.</em></li>
                 </div>
