Finish 3rd block

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         </div>
 
         <div class="block3">
-            <p>When came the dusk of the Lighless Ages, dawn of the First True Age, a peculiarity was distinctly noticed upon the skies of the world. There hung in the black void, ten great rocks of luminous sheens. Ten great rocks of many colors, which had not been there before.</p>
-            <h4>-Quote, Quote</h4>
+            <p><em>When came the dusk of the Lightless Ages, dawn of the first Mortal Age, a peculiarity was distinctly noticed upon the skies of the world. There hung in the black void, ten great rocks of luminous sheens. Ten great rocks of many colors, which had not been there before.</em></p>
+            <h4 id="quote">-Quote, Quote</h4>
         </div>
 
         <div class="block4">
