Finish final block. Webpage done, I guess.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <button id="topbutton">Join us</button>
                 </div>
 
-                <img src="./images/Runes2.webp" width="325px" height="225px" alt="An image of the Founding Tome, runes inscribed upon the front.">
+                <img src="./images/Runes2.webp" style="border-radius: 8px;" width="325px" height="225px" alt="An image of the Founding Tome, runes inscribed upon the front.">
         </div>
         
         <div class="block2">
@@ -58,12 +58,13 @@
         </div>
 
         <div class="block4">
-            <div class="deep-indocrination">
-                <h3>'Tis time. You can delay no longer. Choose.</h3>
+            <div class="block4words">
+                <h3>'Tis time. You can delay no longer. <b style="color: red;">Choose.</b></h3>
                 <p>Some words go here</p>
-
-                <button>Join us.</button>
-                <button>Defy us.</button>
+            </div>
+            <div class="block4buttons">
+                <button id="joinbutton">Join us.</button>
+                <button id="defybutton">Defy us.</button>
             </div>
         </div>
 
