Update changes. Forget changes.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <link rel="stylesheet" href="style.css">
         <meta charset="UTF-8">
-        <title>Weirdsite</title>
+        <title>Landing Page</title>
     </head>
 
     <body>
@@ -19,35 +19,33 @@
 
         <div class="block1">
             <div class="propaganda-block">
-                <h1>I am a big words. You will join the cult</h1>
-                <p>This is a bunch of words underneath the ledger header of your indoctrination. It is said that in the darkest hours of the Lightless Ages, there was not but an eternal cold which gnawed at the bones of all living things. It is thought that this cold was so strong it penetrated through even the earth of the world, such that not even those things of the subterannean world were safe from a frigid death.
+                <h1 style="color: whitesmoke;">Art thou of the faithful Seen?</h1>
+                <p>It is for our undying faith in the Swords' See that we are granted sights unseen by those of the unbelievers. It is in honor of the Iron Raven that <em>we</em> uphold the integrity of history. Truth unraveled, lies unseen. Whilst our faith in Sverd is eternal, to instill faith, <em>true faith,</em> into one Unseen, is a tremendous task. Fortunately, thou've found yourself in the presence of <em>the</em> High Sword. What I offer thee, Unseen one, is an opportunity. An opportunity to serve the Swords' See with <em>true</em> faith. So I ask, what do <em>you</em> see? Will <em>you</em> see for the Swords' See? <em>Will you be Seen?</em>
                 </p>
-                <button id="topbutton">Join us</button>
+                <button id="topbutton">I See, and am Seen, eternal.</button>
                 </div>
 
                 <img src="./images/Runes2.webp" style="border-radius: 8px;" width="325px" height="225px" alt="An image of the Founding Tome, runes inscribed upon the front.">
         </div>
         
         <div class="block2">
-            <h2 style="align-self: center;">Gaze upon the faithful. See those who have shown resolve beyond yours.</h2>
-            <!-- Make imgs have rounded corners -->
+            <h2 style="align-self: center; color: white;">See the Seen. Beholden unto those of faith, and know thou too can be Seen.</h2>
             <ul class="deathrow-portraits">
                 <div class="portrait">
-                    <li><img src="./images/Arcanist.webp" style="border-radius: 15px;" height="300px" width="400px" alt="An image displaying the face of a faithful one."></li>
-                    <li>See the faithful. Gaze into their eyes and envy. Envy for they hold something you do not. Feel hatred at their devotion. Hate, for <em>you</em> are <em>inferior.</em></li>
+                    <li><img src="./images/Arcanist.webp" style="border-radius: 15px;" height="300px" width="400px" alt="An image displaying the face of a Seen one."></li>
+                    <li>Yaiasholl, once but a simple Arcanist, became a Runecaster through Sverd's guidance. And now, through his continued loyalty has begun to grasp the intracacies of Seer magic. A path you too, could follow, were thee Seen.</li>
                 </div>
                 <div class="portrait">
-                    <li><img src="images/Myrkul.webp" style="border-radius: 15px;" height="300px" width="400px" alt="An image displaying the face of a faithful one."></li>
-                    <li>See the faithful. Gaze into their eyes and envy. Envy for they hold something you do not. Feel hatred at their devotion. Hate, for <em>you</em> are <em>inferior.</em></li>
+                    <li><img src="images/Myrkul.webp" style="border-radius: 15px;" height="300px" width="400px" alt="An image displaying the face of a Seen one."></li>
+                    <li>Beholden unto the Eye of Myrkul. Once the mortal god of Death, his power has been lost, dispersed across the world by the Divine Rapture. His sole eye is not the only similarity shared between Sverd and Myrkul, for he is only second in power to the High Sword amongst the Swords' Faith, so wholly does he resonate with the teachings of Sverd's devout.</li>
                 </div>
                 <div class="portrait">
-                    <li><img src="images/Blademist.webp" style="border-radius: 15px;" height="300px" width="400px" alt="An image displaying the face of a faithful one."></li>
-                    <li>See the faithful. Gaze into their eyes and envy. Envy for they hold something you do not. Feel hatred at their devotion. Hate, for <em>you</em> are <em>inferior.</em></li>
+                    <li><img src="images/Blademist.webp" style="border-radius: 15px;" height="300px" width="400px" alt="An image displaying the face of a Seen one."></li>
+                    <li>My zealous proclamations of eternal faith were not exaggeration. Zyyrtulshrosth was the twelvth Bladetongue ever to serve the Swords' See, so he's quite old. What you see before you now is a manifestation of his pure, absolute devotion unto Sverd. One might even call it a <em>faith elemental.</em></li>
                 </div>
                 <div class="portrait">
-                    <li><img src="images/Wanderer.webp" style="border-radius: 15px;" height="300px" width="400px" alt="An image displaying the face of a faithful one."></li>
-                    <li>See the faithful. Gaze into their eyes and envy. Envy for they hold something you do not. Feel hatred at their devotion. 
-                    Hate, for <em>you</em> are <em>inferior.</em></li>
+                    <li><img src="images/Wanderer.webp" style="border-radius: 15px;" height="300px" width="400px" alt="An image displaying the face of a Seen one."></li>
+                    <li>E</li>
                 </div>
             </ul>
         </div>
